--- a/InteropUtils.vcxproj.filters
+++ b/InteropUtils.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="src\capi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\type.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\prototype.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\capi.h">
